[tool.poetry]
name = "code-metrics"
version = "0.1.0"
description = ""
authors = ["Tung Dao <me@tungdao.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.0"
prometheus_client = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
